# public/openapi.json
@@ -7506,6 +7506,14 @@
                 "type": "number",
                 "const": 2
               },
+              "layout": {
+                "default": "single_page",
+                "type": "string",
+                "enum": [
+                  "single_page",
+                  "steps"
+                ]
+              },
               "introduction": {
                 "default": "",
                 "type": "string",
